tests/snapshots/run_wpt_conformance__trtx_gru_float32_tensors_steps_1_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "gru.https.any.js",
    "gru float32 tensors steps=1 all options",
    "trtx",
    Failed {
        msg: Some(
            "Failed to convert graph: graph conversion failed for trtx: Unsupported operation: gru\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    gruBias: f32[1, 12];\n    gruInitialHiddenState: f32[1, 3, 4];\n    gruInput: f32[1, 3, 2];\n    gruRecurrentBias: f32[1, 12];\n    gruRecurrentWeight: f32[1, 12, 4];\n    gruWeight: f32[1, 12, 2];\n  }\n\n  nodes {\n    [gruOutput1, gruOutput2] = gru(gruInput, gruWeight, gruRecurrentWeight, activations=[\"relu\", \"relu\"], bias=5, direction=\"forward\", initialHiddenState=0, label=\"\", layout=\"zrn\", recurrentBias=4, resetAfter=false, returnSequence=true);\n  }\n\n  outputs { gruOutput1; gruOutput2; }\n}\n",
        ),
    },
)
