tests/snapshots/run_wpt_conformance__trtx_hardSigmoid_float16_negative_4D_tensor_specified_negative_options_beta_default_options_alpha.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "hard_sigmoid.https.any.js",
    "hardSigmoid float16 negative 4D tensor specified negative options.beta default options.alpha",
    "trtx",
    "PASS",
)
