tests/snapshots/run_wpt_conformance__trtx_hardSigmoid_float16_positive_3D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "hard_sigmoid.https.any.js",
    "hardSigmoid float16 positive 3D tensor default options",
    "trtx",
    "PASS",
)
